k8s-config/overlays/staging/deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acend-website
  labels:
    app: acend-website-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acend-website-staging
  template:
    metadata:
      labels:
        app: acend-website-staging
    spec:
      containers:
      - name: acend-website
        image: acend/website-hugo:staging
