k8s-config/overlays/staging/svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: acend-website
  labels:
    app: acend-website-staging
spec:
  selector:
    app: acend-website-staging
