k8s-config/overlays/staging/ing-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acend-website
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: staging-basic-auth # user acend, pass acend :)
  labels:
    app: acend-website-staging
spec:
  rules:
  - host: staging.acend.ch
    http:
      paths:
        - backend:
            serviceName: acend-website-staging
            servicePort: 8080
  tls:
  - hosts:
    - staging.acend.ch
    secretName: staging-acend-ch
